; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libradius/extr_radlib.c_rad_put_string.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libradius/extr_radlib.c_rad_put_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rad_handle = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rad_put_string(%struct.rad_handle* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.rad_handle*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.rad_handle* %0, %struct.rad_handle** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load %struct.rad_handle*, %struct.rad_handle** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = load i8*, i8** %6, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call i32 @strlen(i8* %10)
  %12 = call i32 @rad_put_attr(%struct.rad_handle* %7, i32 %8, i8* %9, i32 %11)
  ret i32 %12
}

declare dso_local i32 @rad_put_attr(%struct.rad_handle*, i32, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
